--- a/Kos/scss/common.css
+++ b/Kos/scss/common.css
@@ -61,6 +61,10 @@ a:hover {
 }
 
 /* 手機版選單按鈕 */
+.mobile-bars {
+  height: 60px;
+  width: 60px;
+}
 @media (min-width: 1400px) {
   .mobile-bars { /* XXL */
     display: none;
@@ -83,6 +87,10 @@ a:hover {
 }
 
 /* 手機版購物車按鈕 */
+.mobile-bag {
+  height: 60px;
+  width: 60px;
+}
 @media (min-width: 1400px) {
   .mobile-bag { /* XXL */
     display: none;
@@ -105,10 +113,7 @@ a:hover {
 }
 
 /* 手機板導覽列 */
-.mobile-bars .mobile-bag { /* 手機版購物車按鈕 */
-  height: 60px;
-  width: 60px;
-}
+.mobile-bars .mobile-bag { /* 手機版購物車按鈕 */ }
 .mobile-bars .mobile-bag img { /* 手機版選單圖示 */
   height: 20px;
 }
@@ -599,4 +604,25 @@ a:hover {
   font-size: 1.5rem;
   border-bottom: 4px solid #000;
   padding: 10px 0px;
-}/*# sourceMappingURL=common.css.map */
+}
+
+/* 淡入效果 */
+@keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+/* 淡入效果 */
+/* 淡出效果 */
+@keyframes fadeout {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+/* 淡出效果 *//*# sourceMappingURL=common.css.map */
