--- a/Kos/scss/_common.scss
+++ b/Kos/scss/_common.scss
@@ -1,15 +1,44 @@
-/* 全域變數 */
-:root {
-	--background-color: #f2f2f2;
-	--text-color: #262626;
-	--text-color-hover: #c05a5a;
-	--webkit-scrollbar-color: #d1d0d0;
-	--webkit-scrollbar-thumb-color: #000;
+/* 全域變數 寬度 */
+$xxxl: 1920px;
+$xxl: 1660px;
+$xl: 1400px;
+$lg: 992px;
+$md: 768px;
+$sm: 576px;
+$xs: 0px;
+
+/* 全域變數 顏色 */
+$backgroundColor: #f2f2f2;  // 背景顏色
+$textColor: #262626;  // 文字顏色
+$textColorHover: #c05a5a;  // 文字顏色:hover
+$webkitScrollbarColor: #d1d0d0;  // 卷軸底顏色
+$webkitScrollbarThumbColor: #000;  // 卷軸拖條顏色
+
+/* flex 排列組合 */
+@mixin flex($justify, $align) {
+    display: flex;
+    justify-content: $justify;
+    align-items: $align;
+}
+
+/* fixed 絕對定位 */
+@mixin fixedPosition($topOrBottom, $param1, $leftOrRight, $param2) {
+    position: fixed;
+    @if $topOrBottom == top {
+        top: $param1;
+    } @else if $topOrBottom == bottom {
+        bottom: $param1;
+    }
+    @if $leftOrRight == left {
+        left: $param2;
+    } @else if $leftOrRight == right {
+        right: $param2;
+    }
 }
 
 /* BODY  */
 body {
-	background-color: var(--background-color);
+	background-color: $backgroundColor;
 	font-family: "Noto Sans CJK TC", "Microsoft JhengHei", "PingFang", "STHeiti", sans-serif, serif;
 	font-size: 1.3rem;
 	font-weight: 500;
@@ -23,14 +52,12 @@ body {
 
 /* 超連結 */
 a {
-	color: var(--text-color);
+	color: $textColor;
 	text-decoration: none;
 	transition: .2s;
-}
-
-/* 超連結:hover */
-a:hover {
-	color: var(--text-color-hover);
+    :hover {
+        color: $textColorHover;
+    }
 }
 
 /* 導覽列顏色 (scrollTop > 60) */
@@ -42,160 +69,128 @@ a:hover {
 /* 外層 */
 .wrapper {
     position: relative;
-    @media (min-width: 1400px) {  /* XXL */
+    width: 90%;
+    @media (min-width: $xl) {
         width: 75%;
     }
-    @media (max-width: 1399.98px) and (min-width: 992px) {  /* XXL XL LG */
+    @media (min-width: $lg) {
         width: 85%;
     }
-    @media (max-width: 991.98px) {  /* MD以下 */
-        width: 90%;
-    }
+}
+
+/* 手機版選單按鈕 繼承 */
+%mobileButton {
+    @include flex(center, center);
+    height: 60px;
+    width: 60px;
 }
 
 /* 手機版選單按鈕 */
 .mobile-bars {
-    height: 60px;
-    width: 60px;
-    @media (min-width: 1400px) {  /* XXL */
+    @include fixedPosition(top, 0px, left, 0px);
+    @extend %mobileButton;
+    @media (min-width: $lg) {
         display: none;
     }
-    @media (max-width: 1399.98px) and (min-width: 992px) {  /* XXL XL LG */
-        display: none;
+    .mobile-bag {
+        img {
+            height: 20px;
+        }
     }
-    @media (max-width: 991.98px) {  /* MD以下 */
-        position: fixed;
-		top: 0px;
-		left: 0px;
-		display: flex;
-		justify-content: center;
-		align-items: center;
+    img {
+        height: 15px;
     }
 }
 
 /* 手機版購物車按鈕 */
 .mobile-bag {
-    height: 60px;
-    width: 60px;
-    @media (min-width: 1400px) {  /* XXL */
+    @include fixedPosition(top, 0px, right, 0px);
+    @extend %mobileButton;
+    @media (min-width: $lg) {
         display: none;
-    }
-    @media (max-width: 1399.98px) and (min-width: 992px) {  /* XXL XL LG */
-        display: none;
-    }
-    @media (max-width: 991.98px) {  /* MD以下 */
-        position: fixed;
-		top: 0px;
-		right: 0px;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-    }
-}
-
-/* 手機板導覽列 */
-.mobile-bars {
-    .mobile-bag {  /* 手機版購物車按鈕 */
-        img {  /* 手機版選單圖示 */
-            height: 20px;
-        }
-    }
-    img {  /* 手機版購物車圖示 */
-        height: 15px;
     }
 }
 
 /* 上方導覽列 */
 .topbar {
+    @include flex(center);
+    @include fixedPosition(top, 0px, left, 0px);
 	background-color: transparent;
 	width: 100%;
 	height: 60px;
-	display: flex;
-	justify-content: center;
-    position: fixed;
-	top: 0px;
-	left: 0px;
 	z-index: 10;
 	transition: .2s;
-    .wrapper {  /* 上方導覽列 內層包覆 */
-        display: flex;
-        justify-content: center;
+    .wrapper {
+        @include flex(center);
     }
-    ul {  /* 導覽列選單 */
+    ul {
+        @include flex(center, center);
         list-style: none;
         float: left;
         display: inline;
         margin: 0px;
         padding: 0px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        @media (min-width: 1400px) {  /* XXL */
+        @media (min-width: $xl) {
             width: 30%;
         }
-        @media (max-width: 1399.98px) and (min-width: 992px) {  /* XL LG */
+        @media (min-width: $lg) {
             width: 33%;
         }
-        @media (max-width: 991.98px){  /* MD以下 */
+        @media (min-width: $xs){
             display: none;
         }
     }
-    ul:first-child {  /* 左側選單 */
+    ul:first-child {
         text-align: left;
     }
-    ul:last-child {  /* 右側選單 */
+    ul:last-child {
         text-align: right;
     }
-    ul.topbar-left {  /* 左側選單項目 */
-        li {  /* 左側選單項目靠左對齊 */
+    ul.topbar-left {
+        li {
             text-align: left;
         } 
     }
-    ul.topbar-right {  /* 右側選單項目 */
-        li {  /* 右側選單項目對齊 */
+    ul.topbar-right {
+        li {
             text-align: right;
         }
     }
-    li {  /* 選單項目 */
+    li {
         float: left;
         width: 33.3%;
         text-align: center;
         white-space: nowrap;
-        > a {  /* a */
+        > a {
             width: 100px;
             font-weight: 500;
             text-decoration: none;
-            color: var(--text-color);
+            color: $textColor;
         }
-        > a.active {  /* a.active */
+        > a.active {
             font-weight: bold;
         }
-        > a:hover, 
-        > a:focus, 
-        > a:active {  /* a:hover, a:focus, a:active */
-            color: var(--text-color-hover);
+        > a:hover, > a:focus, > a:active {
+            color: $textColorHover;
         }
     }
-    .topbar-logo {  /* 導覽列 LOGO */
+    .topbar-logo {
+        @include flex(center, center);
         height: 100%;
         float: left;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        img {  /* 網站LOGO */
+        img {
             height: 20px;
         }
-        @media (min-width: 1400px) {  /* XXL */
+        @media (min-width: $xl) {
             width: 40%;
         }
-        @media (max-width: 1399.98px) and (min-width: 992px) {  /* XL LG */
+        @media (min-width: $lg) {
             width: 30%;
         }
-        @media (max-width: 991.98px){  /* MD以下 */
+        @media (min-width: $xs){
             width: 100%;
         }
     }
-
 }
 
 /* 漢堡選單 */
@@ -204,7 +199,7 @@ a:hover {
 	z-index: 1000;
 	top: 0px;
 	left: 0px;
-	background-color: var(--background-color);
+	background-color: $backgroundColor;
 	font-weight: bold;
 	width: 100%;
 	height: 100%;
@@ -221,7 +216,7 @@ a:hover {
     }
     .menu-search {  /* 查詢輸入框 */
         width: 100%;
-        background-color: var(--background-color);
+        background-color: $backgroundColor;
         border: none;
         border-bottom: 3px solid #000;
         padding: 10px 0px;
@@ -312,7 +307,7 @@ a:hover {
         text-align: center;
         width: 55px;
     }
-    @media (min-width: 1660px) {  /* XXL以上 */
+    @media (min-width: $xxl) {  /* XXL以上 */
         display: none;
         position: fixed;
         top: 0px;
@@ -383,7 +378,7 @@ a:hover {
 
 /* 購物車標題 */
 .cart-title {
-    @media (min-width: 1660px) {  /* XXL以上 */
+    @media (min-width: $xxl) {  /* XXL以上 */
         font-size: 1.6rem;
         padding: 40px 0px;
     }
@@ -403,7 +398,7 @@ a:hover {
 
 /* 購物車內容 */
 .cart-body {
-    @media (min-width: 1660px) {  /* XXL以上 */
+    @media (min-width: $xxl) {  /* XXL以上 */
         width: 100%;
         height: calc(100% - 210px);
     }
@@ -514,12 +509,12 @@ a:hover {
 .cart-content-table::-webkit-scrollbar {
 	width: 0px;
 	height: 5px;
-	background-color: var(--webkit-scrollbar-color);
+	background-color: $webkitScrollbarColor;
 }
 
 /* 卷軸樣式-軸 */
 .cart-content-table::-webkit-scrollbar-thumb {
-	background: var(--webkit-scrollbar-thumb-color);
+	background: $webkitScrollbarThumbColor;
 }
 
 /* 購物車內容總和 */
